# sopotek_quant_system

./: .dockerignore  .env  .gitignore  Celery.config.py  Dockerfile  README.md  architecture.md  docker-compose.yml  environment.yml  main.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml  python-package-conda.yml  python-publish.yml
docs/: FULL_APP_GUIDE.md  api.md  architecture.md  brokers-and-modes.md  contributing.md  derivatives.md  development.md  getting-started.md  index.md  integrations.md  mkdocs.yml  release-notes.md  testing-and-operations.md  troubleshooting.md  ui-workspace.md
docs/docs/: index.md
docs/uml/: app-overview.md
scripts/: fix_broad_exception.py
server_app/frontend/: package-lock.json
sopotek_trading_ai_server/: README.md
sopotek_trading_ai_server/backend/: .dockerignore  Dockerfile  README.md  requirements.txt
sopotek_trading_ai_server/docker/: docker-compose.platform.yml  platform.env.example
sopotek_trading_ai_server/docs/: web-platform.md
sopotek_trading_ai_server/frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
src/: .env  create_structure.py  dowload_data.py  generate_features.py  main.py
src/agents/: __init__.py  event_driven_runtime.py  memory.py  orchestrator.py  regime_agent.py  risk_agent.py  signal_agent.py  signal_aggregation_agent.py  signal_consensus_agent.py  signal_fanout.py
src/backtesting/: backtest_engine.py  experiment_tracker.py  optimizer.py  report_generator.py  strategy_ranker.py
src/broker/: __init__.py  alpaca_broker.py  base_broker.py  broker_factory.py  ccxt_broker.py  coinbase_jwt_auth.py  ibkr_broker.py  market_venues.py  oanda_broker.py  paper_broker.py  stellar_broker.py  tdameritrade_broker.py
src/config/: config.py  credential_manager.py
src/core/: multi_symbol_orchestrator.py  sopotek_trading.py
src/engines/: __init__.py  performance_engine.py  risk_engine.py  trading_engine.py
src/event_bus/: __init__.py  event.py  event_bus.py  event_types.py
src/execution/: execution_manager.py  order_router.py  smart_execution.py
src/integrations/: telegram_service.py  voice_service.py
src/licensing/: __init__.py  license_manager.py
src/models/: order.py
src/quant/: ml_research.py  portfolio_allocator.py  portfolio_risk_engine.py  risk_models.py  signal_engine.py  signal_schema.py
src/reasoning/: __init__.py  engine.py  prompt_engine.py  providers.py
src/scripts/: test_coinbase_credentials.py
src/sessions/: session_manager.py  trading_session.py
src/sopotek/: __init__.py
src/sopotek_trading_ai/: Dockerfile  __init__.py  __main__.py
src/sopotek_trading_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/storage/: agent_decision_repository.py  database.py  equity_repository.py  market_data_repository.py  paper_trade_learning_repository.py  trade_audit_repository.py  trade_repository.py
(+263 files in other folders)
