[build-system]
requires = ["setuptools>=74.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sopotek-trading-ai"
version = "0.1.0"
description = "Enterprise-grade trading AI platform."
requires-python = ">=3.10"
license = { text = "Proprietary - Sopotek Corporation" }
authors = [{ name = "Noel Nguemechieu" }]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",

    "aiohttp>=3.9",
    "websockets>=12",
    "SQLAlchemy>=2.0",
    "python-dotenv>=1.0",
    "cryptography>=42.0",
    "joblib>=1.3",
    "arch>=6.3",
    "ta>=0.11",
    "SpeechRecognition>=3.10",
    "sounddevice>=0.4"
]

[project.optional-dependencies]
ui = [

    "Pillow",
    "qrcode"
]

distributed = [
    "celery",
    "redis"
]

dev = [
    "pytest>=8.0",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.10",
    "ruff>=0.5"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
