[build-system]
requires = ["setuptools>=74.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sopotek-trading-ai"
version = "1.0.0"
description = "Enterprise-grade trading AI platform."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary - Sopotek Corporation" }
authors = [{ name = "Noel Nguemechieu" }]
keywords = ["trading", "desktop", "telegram", "openai", "quant", "broker"]

dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0,<3.0",
    "scikit-learn>=1.3",
    "aiohttp>=3.9",
    "websockets>=11.0",
    "ccxt~=2.9.10",
    "oandapyV20>=0.7",
    "stellar-sdk[aiohttp]>=13,<14",
    "SQLAlchemy>=2.0",
    "python-dotenv>=1.0",
    "keyring>=24.0",
    "PyJWT>=2.8",
    "cryptography>=42.0",
    "joblib>=1.3",
    "arch>=6.0",
    "ta>=0.11",
    "pydantic>=2.0",
    "alpaca-trade-api>=3.1",
    "reportlab>=4.0",
    "SpeechRecognition>=3.10",
    "sounddevice>=0.4",
]

[project.urls]
Homepage = "https://github.com/nguemechieu/sopotek-trading-ai"
Documentation = "https://github.com/nguemechieu/sopotek-trading-ai/tree/master/docs"
Repository = "https://github.com/nguemechieu/sopotek-trading-ai"

[project.optional-dependencies]
ui = [
    "Pillow>=10.0",
    "qrcode>=7.4",
    "PySide6>=6.5",
    "shiboken6>=6.5",
    "pyqtgraph>=0.13",
    "qasync>=0.26",
    "matplotlib>=3.7",
]

brokers = [
    "ccxt~=2.9.10",
    "oandapyV20>=0.7",
    "stellar-sdk[aiohttp]>=13,<14",
    "alpaca-trade-api>=3.1",
]

ml = [
    "xgboost>=1.7",
    "hmmlearn>=0.3",
]

distributed = [
    "celery>=5.3",
    "redis>=5.0",
]

docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
]

dev = [
    "pytest>=8.0",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.10",
    "ruff>=0.5",
    "flake8>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
